--- a/src/views/partials/createTicketWindow.hbs
+++ b/src/views/partials/createTicketWindow.hbs
@@ -49,7 +49,9 @@
             </div>
 
             <div class="uk-margin-medium-bottom">
-                <span>Description</span>
+                <span>Description123</span>
+                <label for="expected_due_date" style="display: block; margin-top: 10px;">Expected Due Date:</label>
+                <input type="date" id="expected_due_date" name="expected_due_date" style="margin-bottom: 10px;">
                 <div class="error-border-wrap uk-clearfix">
                     <textarea id="issue" name="issue"></textarea>
                     <div class="editor-statusbar uk-float-left uk-width-1-1"></div>
