--- a/src/views/pub_signup.hbs
+++ b/src/views/pub_signup.hbs
@@ -398,6 +398,7 @@
         window.Snackbar = loadedModules[1];
         var helpers = loadedModules[2];
 
+        console.log("Sign up file")
         $(document).ready(function() {
             helpers.init();
             getCaptcha();
