--- a/src/views/subviews/printticket.hbs
+++ b/src/views/subviews/printticket.hbs
@@ -69,7 +69,7 @@
 
                         <div class="small-12 columns nopadding">
                             <div style="margin-bottom: 10px;">
-                                <span>Group:</span>
+                                <span>Customer Group:</span>
                                 <p style="font-weight: 600; display: inline; margin-left: 20px;">{{data.ticket.group.name}}</p>
                             </div>
                         </div>
